se cambio el slide de tutorial

--- a/src/pages/tutorial/tutorial.html
+++ b/src/pages/tutorial/tutorial.html
@@ -1,5 +1,6 @@
 <ion-header no-shadow>
-  <ion-navbar>
+  <ion-navbar color="dark">
+    <img src="../../assets/img/logo_monesco-1%20(1).png"/> 
     <ion-buttons end *ngIf="showSkip">
       <button ion-button (click)="startApp()" color="primary">{{ 'TUTORIAL_SKIP_BUTTON' | translate}}</button>
     </ion-buttons>
@@ -22,4 +23,8 @@
       </button>
     </ion-slide>
   </ion-slides>
+<ion-item-divider>
+    <h3>WE ARE #1 IN WEB DESIGN AND DEVELOPMENT</h3>
+<h5>The secret of our long history is the loyalty of our satisfied customers.</h5>
+</ion-item-divider>
 </ion-content>
